test/unit-tests/errors/regex-match-error.spec.d.ts
export declare class EqualMatchErrorTests {
    shouldMatchMessage(actualValue: any, expectedRegex: RegExp): void;
    shouldNotMatchMessage(actualValue: any, expectedRegex: any): void;
}
